// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot when expanded 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-tabs__item pf-m-overflow pf-m-current"
    role="presentation"
  >
    <button
      aria-expanded="true"
      aria-haspopup="menu"
      class="pf-v6-c-tabs__link pf-m-expanded"
      role="tab"
      type="button"
    >
      <span
        class="pf-v6-c-tabs__item-text"
      >
        Tab one
      </span>
      <span
        class="pf-v6-c-tabs__link-toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
          />
        </svg>
      </span>
    </button>
  </li>
  <div
    data-testid="popper-mock"
  >
    <div
      data-testid="trigger"
    />
    <div
      data-testid="popper"
    >
      <div
        data-testid="menu-mock"
      >
        <div
          data-testid="menu-content-mock"
        >
          <ul
            data-testid="menu-list-mock"
          >
            <li
              id="1-menu-item-mock"
            >
              Tab one
              <p>
                Selected: true
              </p>
            </li>
            <li
              id="2-menu-item-mock"
            >
              Tab two
              <p>
                Selected: false
              </p>
            </li>
          </ul>
        </div>
        <button>
          Select
        </button>
      </div>
    </div>
    <p>
      Append to class name: pf-v6-c-tabs__item pf-m-overflow pf-m-current
    </p>
  </div>
</DocumentFragment>
`;

exports[`Renders tabs passed via overflowingTabs when expanded in strict mode 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-tabs__item pf-m-overflow"
    role="presentation"
  >
    <button
      aria-expanded="true"
      aria-haspopup="menu"
      class="pf-v6-c-tabs__link pf-m-expanded"
      role="tab"
      type="button"
    >
      <span
        class="pf-v6-c-tabs__item-text"
      >
        More
      </span>
      <span
        class="pf-v6-c-tabs__link-toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
          />
        </svg>
      </span>
    </button>
  </li>
  <div
    data-testid="popper-mock"
  >
    <div
      data-testid="trigger"
    />
    <div
      data-testid="popper"
    >
      <div
        data-testid="menu-mock"
      >
        <div
          data-testid="menu-content-mock"
        >
          <ul
            data-testid="menu-list-mock"
          >
            <li
              id="1-menu-item-mock"
            >
              Tab one
              <p>
                Selected: false
              </p>
            </li>
            <li
              id="2-menu-item-mock"
            >
              Tab two
              <p>
                Selected: false
              </p>
            </li>
          </ul>
        </div>
        <button>
          Select
        </button>
      </div>
    </div>
    <p>
      Append to class name: pf-v6-c-tabs__item pf-m-overflow
    </p>
  </div>
</DocumentFragment>
`;
